--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-joi-validation": "^5.0.1",
+    "fs": "^0.0.1-security",
     "generate-password": "^1.7.0",
     "google-auth-library": "^8.1.1",
+    "https": "^1.0.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
