--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "morgan": "^1.10.0",
     "nc-db-new": "^1.2.46",
     "nodemailer": "^6.7.5",
+    "path": "^0.12.7",
     "pg": "^8.7.3",
     "sequelize": "^6.21.1",
     "stripe": "^10.12.0",
