--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "crypto-js": "^4.1.1",
     "date-fns": "^2.29.2",
     "dotenv": "^16.0.1",
+    "easyinvoice": "^3.0.16",
     "express": "^4.18.1",
     "express-joi-validation": "^5.0.1",
     "generate-password": "^1.7.0",
@@ -51,7 +52,7 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
-    "nc-db-new": "^1.2.54",
+    "nc-db-new": "^1.2.55",
     "nodemailer": "^6.7.5",
     "pg": "^8.7.3",
     "sequelize": "^6.21.1",
