--- a/package.json
+++ b/package.json
@@ -49,11 +49,13 @@
     "express-joi-validation": "^5.0.1",
     "generate-password": "^1.7.0",
     "google-auth-library": "^8.1.1",
+    "https": "^1.0.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "nc-db-new": "^1.2.55",
     "nodemailer": "^6.7.5",
+    "path": "^0.12.7",
     "pg": "^8.7.3",
     "sequelize": "^6.21.1",
     "stripe": "^10.12.0",
